[package]
name = "http-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
tower = "0.5"
hyper = { version = "1", features = ["full", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
toml = "0.8"
async-compression = { version="0.4.32", features=["gzip", "zstd", "all-implementations"]}
http-body-util = "*"
clap = { version="*", features=["derive"]}